Ported to 1.19.2 (not yet ready for release)